[tool.poetry]
name = "git_tools"
version = "0.1.0"
description = ""
authors = ["svtter <xiuhao@thinghoo.com>"]
include = ["src/*"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "thinghoo"
url = "https://nexus.beijing-epoch.com/repository/pypi-thinghoo-group/simple"
default = true

# -- FILE: pytest.ini (or tox.ini)
[tool.pytest.ini_options]
# -- recommended but optional:
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"