[tool.poetry]
name = "git_tools"
version = "0.1.0"
description = ""
authors = ["svtter <xiuhao@thinghoo.com>"]
include = ["src/*"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# -- FILE: pytest.ini (or tox.ini)
[tool.pytest.ini_options]
# -- recommended but optional:
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"

[[tool.poetry.source]]
name = "private-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.scripts]
git_tools = "git_tools.__main__:cli"
